--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Oxid Module
 
 <p>You have chosen the affilinet module for your OXID eShop. This module facilitates your daily work by integrating essential functionalities of our affilinet platform into your usual store.</p>
 
-<p>The affilinet module enables you to integrate important affiliate marketing features into your Magento OXID eShop. Affilinet presents performance marketing, an attractive, success-based payment model for users directed to your website, high quality, transparent tracking and reporting as well as a sales
+<p>The affilinet module enables you to integrate important affiliate marketing features into your OXID eShop. Affilinet presents performance marketing, an attractive, success-based payment model for users directed to your website, high quality, transparent tracking and reporting as well as a sales
 network with 500.000 publishers (website operators, promoting your products online). This module offers you new customer potentials to expand your reach.</p>
 <p><strong>Using this module offers you concretely:</strong></p>
 <ol>
