Separate support page added

--- a/support/index.html
+++ b/support/index.html
@@ -1,8 +1,14 @@
+---
+title: OXID eShop Support
+slug: support
+---
+
+<br><br>
 <p>Do you have any questions about the module or do you need support from a technical specialist?</p>
 
 <p><strong>Supporthotline  01801/414300</strong></p>
 
-<p>(Festnetzpreis 3,9 ct/min; Mobilfunkpreise höchstens 42 ct/min.)</p>
+<p>(Fixed price 3,9 ct / min, mobile phone prices maximum 42 ct / min)</p>
 
 <p>Available from Monday to Friday: 9 a.m. to 6 p.m.. The first 60 minutes will not be charged.</p>
 
